fix: 去除了idl中不必要的baseResp返回
